<resources>
    <string name="app_name">goApps</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_developer">Developer</string>
    <string name="tv_createaccount">Create a new Account !</string>
    <string name="register">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_Password">Password</string>
    <string name="tv_silakan">Silahkan Login Untuk Memakai Aplikasi</string>
    <string name="tv_or">OR</string>
    <string name="img_logo">Logo</string>
    <string name="or">OR</string>
    <string name="hint_password">Password</string>
</resources>
