<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/img_logo"
            android:id="@+id/imgLogo"
            android:background="@drawable/logotext"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_below="@id/imgLogo"
            android:id="@+id/tvsilahkan"
            android:textAlignment="center"
            android:layout_marginBottom="25dp"
            android:text="@string/tv_silakan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btnFacebook"
            android:layout_below="@+id/tvsilahkan"
            android:background="@drawable/btn_facebook"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@+id/btnFacebook"
            android:id="@+id/tvOr"
            android:textAlignment="center"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/tv_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="text"
            android:autofillHints="@string/hint_username"
            android:id="@+id/etUsername"
            android:hint="@string/hint_username"
            android:drawableStart="@drawable/ic_user"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvOr"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:autofillHints="@string/hint_Password"
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:hint="@string/hint_Password"
            android:drawableStart="@drawable/ic_lock"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etUsername"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>

        <Button
            android:background="@drawable/btn_sign_in"
            android:id="@+id/btnLogin"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_createaccount"/>

            <TextView
                android:id="@+id/tvregister"
                android:layout_toEndOf="@+id/tv01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#EA495F"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
